UHF-4235: Simplify link and button styles

--- a/templates/button/link-button.html.twig
+++ b/templates/button/link-button.html.twig
@@ -43,33 +43,15 @@
   class,
 ] %}
 
+
+{% set explain = null %}
 {% set link_options = {class: classes|join(' ')} %}
 
-{% set explain = [] %}
-
-{% if is_external %}
-  {%- set explain_external_icon -%}
-    {{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }}
-  {%- endset -%}
-  {% set explain = explain|merge([explain_external_icon]) %}
-  {% set icon_last = true %}
-  {% set icon_last_type = 'link-external' %}
-{% endif %}
-
 {% if open_in_a_new_window %}
-  {%- set explain_opens_in_new_window -%}
-    {{ 'The link opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}
+  {%- set explain -%}
+    <span class="hds-button__target-blank">({{ 'The link opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}.)</span>
   {%- endset -%}
-  {% set explain = explain|merge([explain_opens_in_new_window]) %}
   {% set link_options = link_options|merge({target: '_blank'}) %}
-{% endif %}
-
-{% if open_in_a_new_window or is_external %}
-  {% set explain %}
-    <span class="explain-external-icon">({{ explain|join('. ') }}.)</span>
-  {% endset %}
-{% else %}
-  {% set explain = null %}
 {% endif %}
 
 {% set title %}
