--- a/src/scss/05_objects/_link.scss
+++ b/src/scss/05_objects/_link.scss
@@ -5,22 +5,33 @@ a.link[target="_blank"] {
 
   // TODO: This is not wanted, we should separate target="_blank" from external links!
   &::after {
-    @include pseudo-icon('link-external', 1em, currentColor, block);
+    @include pseudo-icon('error', 1em, red, block);
   }
 }
 
-.link__external {
-  &::after {
-    @include pseudo-icon('link-external', calc(var(--line-height) * 1em), currentColor, inline-block);
-    @include hover-link-arrow-transition();
-    --external-icon-move: translate(3px, -3px);
-    @media (prefers-reduced-motion) {
-      --external-icon-move: scale(1);
-    }
+.link__type {
+  @include pseudo-icon('link-external', calc(var(--line-height) * 1em), currentColor, inline-block);
+  @include hover-link-arrow-transition();
+  --external-icon-move: translate(3px, -3px);
 
-    a:focus &,
-    a:hover & {
-      transform: var(--external-icon-move);
-    }
+  a:focus &,
+  a:hover & {
+    transform: var(--external-icon-move);
+  }
+}
+
+.link__type--tel {
+  @include pseudo-icon-replace('phone');
+  --external-icon-move: rotate(15deg);
+}
+
+.link__type--mailto {
+  @include pseudo-icon-replace('envelope');
+  --external-icon-move: rotate(15deg);
+}
+
+.link__type {
+  @media (prefers-reduced-motion) {
+    --external-icon-move: scale(1);
   }
 }
