UHF-2870: Hid the result counter from service and unit listings on service and unit pages and from service list paragraph if there is no paged content, adjusted margin on service and unit listings to match

--- a/templates/views/views-view--service-list.html.twig
+++ b/templates/views/views-view--service-list.html.twig
@@ -54,10 +54,12 @@
   {{ exposed }}
   {{ attachment_before }}
 
-  <span class="service-list__count-container">
-    <span class="service-list__count">{{ total_rows }}</span>
-    {% trans with {'context': 'Service list count'}%}service{% plural total_rows %}services{% endtrans %}
-  </span>
+  {%  if total_rows > pager_items_per_page %}
+    <span class="service-list__count-container">
+      <span class="service-list__count">{{ total_rows }}</span>
+      {% trans with {'context': 'Service list count'}%}service{% plural total_rows %}services{% endtrans %}
+    </span>
+  {% endif %}
 
   {{ rows }}
 
