--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -223,6 +223,10 @@ $teaser-icon-size-desktop: 48px;
 
   .service__units__list {
     margin-top: $spacing-and-half;
+
+    @include breakpoint($breakpoint-l) {
+      margin-top: $spacing-triple;
+    }
   }
 
   .unit.unit--teaser {
