--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -278,13 +278,16 @@
   .unit__services__list {
     margin-top: $spacing-and-half;
 
+    @include breakpoint($breakpoint-l) {
+      margin-top: $spacing-triple;
+    }
+
     > * {
       @include breakpoint($breakpoint-l) {
         display: flex;
         flex-wrap: wrap;
         margin-left: calc(-#{$spacing-and-half} / 2);
         margin-right: calc(-#{$spacing-and-half} / 2);
-        margin-top: $spacing-triple;
       }
     }
 
