--- a/templates/views/views-view--service-units.html.twig
+++ b/templates/views/views-view--service-units.html.twig
@@ -16,10 +16,12 @@
 
     <div class="service__units__header">
       <h2 class="service__units__title">{% trans %}Service points{% endtrans %}</h2>
-      <span class="service__units__count-container">
-        <span class="service__units__count">{{ total_rows }}</span>
-        {% trans with {'context': 'Service units count'}%}service point{% plural total_rows %}service points{% endtrans %}
-      </span>
+      {%  if total_rows > pager_items_per_page %}
+        <span class="service__units__count-container">
+          <span class="service__units__count">{{ total_rows }}</span>
+          {% trans with {'context': 'Service units count'}%}service point{% plural total_rows %}service points{% endtrans %}
+        </span>
+      {% endif %}
     </div>
     <div{{ attributes.addClass(classes) }}>
       {% if header %}
