UHF-4235: Fix dropdown navigation hover and active-trail styles

--- a/src/scss/06_components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/06_components/navigation/_header-bottom-navigation.scss
@@ -184,8 +184,13 @@
       }
     }
 
-    &:hover,
     &[aria-current="page"] {
+      font-weight: $font-weight-bold;
+    }
+
+    &:hover,
+    &[aria-current="page"],
+    &.menu__link--active-trail {
       &::before {
         height: 100%;
         width: 4px;
