--- a/modules/hdbt_content/templates/tpr-errand-service-detail-link.html.twig
+++ b/modules/hdbt_content/templates/tpr-errand-service-detail-link.html.twig
@@ -2,7 +2,7 @@
 <ul class="errand-service__detail-links">
   {% for link in links %}
     <li class="errand-service__detail-link-wrapper">
-      <a href="{{ link.url }}" target="_blank" class="errand-service__detail-link">{{ link.title }}</a>
+      <a href="{{ link.url }}" class="errand-service__detail-link">{{ link.title }}</a>
     </li>
   {% endfor %}
 </ul>
