UHF-2777: Fixed UHF-4422

--- a/templates/paragraphs/paragraph--service-list.html.twig
+++ b/templates/paragraphs/paragraph--service-list.html.twig
@@ -8,7 +8,7 @@
   %}
     {% block component_content %}
 
-      {{ drupal_view('service_list', 'block', service_list_arguments) }}
+      {{ drupal_view('service_list', 'block', services_list, search_parent_paragraph) }}
 
     {% endblock component_content %}
   {% endembed %}
