--- a/templates/paragraphs/paragraph--unit-search.html.twig
+++ b/templates/paragraphs/paragraph--unit-search.html.twig
@@ -9,7 +9,7 @@
   %}
     {% block component_content %}
 
-      {{ drupal_view('unit_search', 'block', unit_search_arguments) }}
+      {{ drupal_view('unit_search', 'block', units_list, search_parent_paragraph) }}
 
     {% endblock component_content %}
   {% endembed %}
