--- a/src/scss/06_components/layout/_error-pages.scss
+++ b/src/scss/06_components/layout/_error-pages.scss
@@ -37,12 +37,23 @@
   display: inline-flex;
   margin-top: $spacing-double;
 
-  .hel-icon {
-    margin-left: $spacing-half;
+  &::after {
+    @include pseudo-icon('arrow-right');
+    @include hover-link-arrow-transition();
+  }
+  &[data-is-external]::after {
+    content: none;
   }
 
   &:hover {
     text-decoration: none;
+
+    &::after {
+      transform: translateX($spacing-quarter);
+      @media (prefers-reduced-motion) {
+        transform: none;
+      }
+    }
   }
 
   + .error-page__link {
@@ -50,12 +61,23 @@
   }
 }
 
+
 .error-page__login-title {
   @include font('h3');
 }
 
 .error-page__login-form {
   margin-top: $spacing-double;
+
+  // // When we want to hide password login from this area, use this.
+  // .user-login-form,
+  // > [role='form'] > ul {
+  //   display: none;
+  // }
+  // .openid-connect-login-form {
+  //   margin-top: 0;
+  //   border-top: 0 none;
+  // }
 }
 
 .error-page__illustration-container {
