--- a/templates/layout/page--401.html.twig
+++ b/templates/layout/page--401.html.twig
@@ -7,8 +7,24 @@
             <h1 class="error-page__title">{{ error_number|default('401') }} - {{ 'You do not have permission to access this page'|t }}</h1>
           </div>
           <p class="error-page__description">{{ 'This page is available to registered users only. If you have the necessary permissions, you can sign in to see the content.'|t }}</p>
-          <a href="{{ error_page_home_link }}" class="error-page__link">{{ 'Go back to the hel.fi homepage'|t({}, {'context': 'Return to homepage link for error pages'}) }} {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right'} %}</a><br/>
-          <a href="{{ error_page_feedback_link }}" class="error-page__link">{{ 'Give feedback'|t({}, {'context': 'Feedback link for error pages'}) }} {% include '@hdbt/misc/icon.twig' with {icon: 'arrow-right'} %}</a>
+
+          {% set link_title %}
+            {{ 'Go back to the hel.fi homepage'|t({}, {'context': 'Return to homepage link for error pages'}) }}
+          {% endset %}
+          {% set link_attributes = {
+            'class': [
+              'error-page__link',
+            ],
+          } %}
+          {{ link(link_title, error_page_home_link, link_attributes) }}
+
+          <br>
+
+          {% set feedback_link_title %}
+            {{ 'Give feedback'|t({}, {'context': 'Feedback link for error pages'}) }}
+          {% endset %}
+          {{ link(feedback_link_title, error_page_feedback_link, link_attributes) }}
+
           {% if user_not_logged_in %}
             <h2 class="error-page__login-title">{{ 'Log in'|t({}, {'context': 'Log in block title on error pages'}) }}</h2>
           {% endif %}
