UHF-4235: Add animation also on focus for content cards

--- a/src/scss/06_components/paragraphs/_content-cards.scss
+++ b/src/scss/06_components/paragraphs/_content-cards.scss
@@ -79,6 +79,7 @@ $card_spacing: $spacing-and-half;
     }
   }
 
+  &:focus,
   &:hover {
     .content-card__title {
       text-decoration: underline;
