UHF-4235: Convert remote-video to use link function

--- a/templates/media/media--remote-video.html.twig
+++ b/templates/media/media--remote-video.html.twig
@@ -46,8 +46,6 @@
         set external_link_classes = [
         'hds-button',
         'hds-button--primary',
-        'hdbt-icon',
-        'hdbt-icon--link-external'
       ]
       %}
 
@@ -68,9 +66,17 @@
         'hds-button--secondary',
       ]
       %}
-      <a href="{{ privacy_policy_url }}" {{ create_attribute({'class': settings_link_classes} ) }}>
+      {% set link_title %}
         <span class="hds-button__label">{{ 'Change cookie settings'|t }}</span>
-      </a>
+      {% endset %}
+      {% set link_attributes = {
+        'class': [
+          'hds-button',
+          'hds-button--secondary',
+        ],
+      } %}
+      {{ link(link_title, privacy_policy_url, link_attributes) }}
+
     </div>
   </div>
 </div>
