--- a/templates/media/media--remote-video.html.twig
+++ b/templates/media/media--remote-video.html.twig
@@ -42,16 +42,12 @@
       {% endtrans %}
     </p>
     <div class="buttons">
-      {%
-        set external_link_classes = [
-        'hds-button',
-        'hds-button--primary',
-      ]
-      %}
 
       {% set external_link_attributes = {
-        'class': external_link_classes,
-        'target': '_blank',
+        'class': [
+          'hds-button',
+          'hds-button--primary',
+        ]
       } %}
 
       {% set external_link_title %}
@@ -60,12 +56,6 @@
 
       {{ link(external_link_title, media_url, external_link_attributes) }}
 
-      {%
-        set settings_link_classes = [
-        'hds-button',
-        'hds-button--secondary',
-      ]
-      %}
       {% set link_title %}
         <span class="hds-button__label">{{ 'Change cookie settings'|t }}</span>
       {% endset %}
