UHF-4235: Remove redundant code and simplify pager

--- a/src/scss/06_components/navigation/__index.scss
+++ b/src/scss/06_components/navigation/__index.scss
@@ -6,6 +6,7 @@
 @import 'language-switcher';
 @import 'local-tasks';
 @import 'mobile-navigation';
+@import 'pager';
 @import 'sidebar-menu';
 @import 'skip-to-main';
 @import 'table-of-contents';
