UHF-4235: Converted TPR Service channel email link to use link function.

--- a/templates/module/helfi_tpr/tpr-service-channel.html.twig
+++ b/templates/module/helfi_tpr/tpr-service-channel.html.twig
@@ -59,9 +59,14 @@
     </div>
   {% endif %}
 
-  {% if content.email|render %}
+  {% if service_channel_email_link and content.email|render %}
+    {% set link_attributes = {
+      'class': [
+        'service-channel__email-link',
+      ],
+    } %}
     <div class="service-channel__email">
-      <a href="mailto:{{ content.email.0 }}" class="service-channel__email-link">{{ content.email }}</a>
+      {{ link(content.email, service_channel_email_link, link_attributes) }}
     </div>
   {% endif %}
 
