UHF-3596: UHF-3596 Fix issue with lower content videos

--- a/src/scss/06_components/paragraphs/_remote-video.scss
+++ b/src/scss/06_components/paragraphs/_remote-video.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.has-sidebar .component--remote-video {
+.has-sidebar .components--upper .component--remote-video {
   @include breakpoint(max-width $breakpoint-l) {
     @include component-negative-side-margin;
   }
