--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -258,7 +258,7 @@
               'unit__link',
             ],
           } %}
-          {{ link(entity.label, url, unit_link_attributes) }}
+          {{ link(entity.label, unit_url, unit_link_attributes) }}
         </h3>
         <div class="unit__info">
           {% if content.address|render %}
